# InformaticsCodeSender

./: .clang-format  CMakeLists.txt  auth.cpp  constants.hpp  lastSave.cpp  main.cpp  main.hpp  test.cpp
.github/workflows/: cmake-single-platform.yml
tests/: pesho.cpp
